# exoskeleton_irobotlab

./: README.md
install/: local_setup.sh  setup.sh
install/control_exos/share/control_exos/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/control_exos/share/control_exos/cmake/: control_exosConfig-version.cmake  control_exosConfig.cmake
install/control_exos/share/control_exos/environment/: ament_prefix_path.dsv  path.dsv
install/tongquan_sldasm/share/tongquan_sldasm/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
install/tongquan_sldasm/share/tongquan_sldasm/cmake/: tongquan_sldasmConfig-version.cmake  tongquan_sldasmConfig.cmake
install/tongquan_sldasm/share/tongquan_sldasm/config/: joint_names_tongquan.SLDASM.yaml  joint_trajectory_controller.yaml  ros2_controllers.yaml  ros2_controllers_1.yaml
install/tongquan_sldasm/share/tongquan_sldasm/environment/: ament_prefix_path.dsv  path.dsv
install/tongquan_sldasm/share/tongquan_sldasm/launch/: demo2.launch.py  demo_gazebo.launch.py  display.launch.py  gazebo.launch.py  luutru.txt  met.launch.py  push_angle.launch.py  synch2.launch.py  synch_gazebo_moveit.launch.py  test.launch.py  test1.launch.py  test2.launch.py
install/tongquan_sldasm/share/tongquan_sldasm/meshes/: base_link.STL  chan_phai_link.STL  chan_trai_link.STL  dau_goi_phai_link.STL  dau_goi_trai_link.STL
install/tongquan_sldasm/share/tongquan_sldasm/urdf/: nhap.urdf  tongquan.SLDASM.csv  tongquan_sldasm.csv  tongquan_sldasm.urdf
log/: latest_build  latest_list
src/chan/: CMakeLists.txt
src/chan/config/: kinematics.yaml  tongquan_sldasm.ros2_control.xacro
src/chan/launch/: move_group.launch.py  rsp.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
src/control_exos/: CMakeLists.txt
src/control_exos/src/: check_data_ros.py  contact.py  contact_mc.py  control_angle.py  donghoc.py  gioi_han.py  gioi_han_nhan  hi.py  ik.py  luutru2.py  luutrudulieu.py  mathplot.py  nhucc.py  node_control.py  node_control_true.py  note.py  plot.py  push_angle.py  receive_control.py  serial_monitor.py  thaythe.py
src/control_exos/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/control_exos/src/log/: latest_build
src/moveit/: .setup_assistant  CMakeLists.txt
src/moveit/config/: moveit_controllers.yaml  tongquan_sldasm.srdf
src/moveit/launch/: rsp.launch.py  setup_assistant.launch.py  simple_moveit.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/moveit_2/: CMakeLists.txt  package.xml
src/moveit_2/config/: kinematics.yaml  moveit_controllers.yaml
src/moveit_2/launch/: demo.launch.py  move_group.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py
src/moveit_true/: CMakeLists.txt  package.xml
src/moveit_true/config/: kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  tongquan_sldasm.srdf
src/moveit_true/launch/: demo.launch.py  moveit_rviz.launch.py  (+1 more)
src/tongquan_sldasm/: CMakeLists.txt
(+196 files in other folders)
