<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tongquan_sldasm</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for tongquan_sldasm</p>
    <p>This package contains configuration data, 3D models, and launch files for the tongquan_sldasm robot</p>
  </description>
  <maintainer email="logan@todo.todo">logan</maintainer>
  <license>BSD</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Package dependencies -->
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo_ros</depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent/>
    <gazebo_ros gazebo_model_path="${prefix}/share"/>
    <gazebo_ros gazebo_media_path="${prefix}/worlds"/>
  </export>
</package>
